홈 화면 아이콘 삽입 및 해당 위치에 마커 생성

--- a/app/react-app/nightsafe/src/App.css
+++ b/app/react-app/nightsafe/src/App.css
@@ -97,7 +97,7 @@ button{
   color: var(--black1);
 }
 
-.li_search{
+/* .li_search{
   position: relative;
 }
 
@@ -153,4 +153,4 @@ button{
   display: flex;
   align-items: center;
   justify-content: center;
-}
+} */
