--- a/app/react-app/nightsafe/src/pages/write.module.css
+++ b/app/react-app/nightsafe/src/pages/write.module.css
@@ -1,26 +1,101 @@
-.writeContainer {
-  width: 800px;
-  margin: 0px auto;
-  border-radius: 8px;
-  background-color: #fff;
+.con_write {
+  max-width: 800px;
+  margin: 0 auto;
+  margin-top: var(--margin40);
 }
 
-.choice{
-    display: flex;
-    flex-direction: column;
-    margin-top: var(--margin40);
-}
-
-.wtInput{
-  padding: var(--padding20);
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  font-size: var(--fontsize14);
+.btn_search{
+  width: 100%;
+  padding: var(--padding20) var(--padding40);
+  border: 1px solid var(--gray1);
   border-radius: var(--border_radius);
+  cursor: pointer;
+  background-color: #fff;
+  text-align: left;
 }
 
-.Information{
-    margin-top: var(--margin40);
-    height: 400px;
-    border: 1px solid #ccc;
+.ta_write{
+  width: 100%;
+  height: 400px;
+  overflow-y: auto;
+  overflow-x: hidden;
+  margin-top: var(--margin20);
+  border-radius: var(--border_radius);
+  border: 1px solid var(--gray1);
+  resize: none;
+  color: var(--black1);
+  font-family: 'NotoSans';
+  font-size: var(--fontsize16);
+  padding: var(--padding20) var(--padding40);
+}
+
+.ta_write::placeholder{
+  color: var(--gray1);
+}
+
+.btn_submit{
+  width: 100%;
+  padding: var(--padding20) var(--padding40);
+  border-radius: var(--border_radius);
+  background-color: var(--point);
+  margin-top: var(--margin40);
+}
+
+.popup_map{
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  background-color: rgba(0,0,0,0.2);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.map_wrap{
+  width: 800px;
+  height: 800px;
+  position: relative;
+}
+
+.map{
+  width: 100%;
+  height: 100%;
+}
+
+.btn_mapclose{
+  position: absolute;
+  z-index: 9999;
+  right: 20px;
+  top: 20px;
+  background: none;
+}
+
+.btn_mapclose svg{
+  fill: var(--black1);
+}
+
+.btn_select{
+  position: absolute;
+  bottom: 40px;
+  left: 50%;
+  transform: translateX(-50%);
+  border-radius: 50px;
+  background-color: var(--point);
+  z-index: 9999;
+  padding: var(--padding12_24);
+  box-shadow: var(--shadow);
+}
+
+.center{
+  position: absolute;
+  width: 20px;
+  height: 20px;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 999;
+  border-radius: 50px;
+  border: 2px solid var(--red);
 }
