--- a/app/react-app/nightsafe/src/App.css
+++ b/app/react-app/nightsafe/src/App.css
@@ -97,70 +97,14 @@ button{
   color: var(--black1);
 }
 
-/* .li_search{
-  position: relative;
-}
-
-.inp_search{
-  width: 300px;
-  padding: var(--padding8_16);
-  border: none;
-  border-bottom: 1px solid var(--black2);
-  font-size: var(--fontsize16);
-  color: var(--black1);
-}
-
-.inp_search:focus{
-  outline: none;
-}
-
-.btn_search{
-  position: absolute;
-  background: none;
-  top: 50%;
-  right: var(--margin8);
-  transform: translateY(-50%);
-}
-
-.search_result{
-  position: absolute;
-  top: var(--navheight);
-  z-index: 999;
-  width: 300px;
-  height: 300px;
-  overflow-x: hidden;
-  overflow-y: scroll;
-  border-radius: var(--border_radius);
-  box-shadow: var(--shadow);
-  border: 1px solid var(--gray1);
-  background-color: #fff;
-}
-
-.li_result{
-  padding: var(--padding20);
-  border-bottom: 1px solid var(--gray1);
-  transition: all 0.3s;
-  cursor: pointer;
-}
-
-.li_result:hover{
-  background-color: var(--gray2);
-}
-
-.li_nosearch{
-  width: 100%;
-  height: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-} */
-
 .marker_info{
     border-radius: var(--border_radius);
     background-color: #fff;
-    padding: var(--padding12_24);
+    padding: var(--padding20);
     box-shadow: var(--shadow);
     position: relative;
+    width: 250px;
+    text-align: center;
 }
 
 .marker_info::before{
@@ -173,4 +117,32 @@ button{
   z-index: 99;
   background-color: #fff;
   transform: translateX(-50%) rotate(45deg);
+}
+
+.btn_navigate{
+  background-color: var(--point);
+  box-shadow: var(--shadow);
+  padding: var(--padding8_16);
+  margin-top: var(--margin20);
+  border-radius: 50px;
+}
+
+.marker_content{
+  max-width: 210px;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  line-height: 1.2em;
+  max-height: 2.4em;
+  white-space: normal;
+  text-align: left;
+}
+
+.marker_nickname{
+  margin-bottom: var(--margin8);
+  font-size: var(--fontsize14);
+  color: var(--black2);
+  text-align: left;
 }
