--- a/app/react-app/nightsafe/src/pages/post.module.css
+++ b/app/react-app/nightsafe/src/pages/post.module.css
@@ -3,6 +3,43 @@
     margin: 0 auto;
     margin-top: var(--margin40);
 }
+.fixed_write{
+    position: fixed;
+    right: 40px;
+    bottom: 40px;
+    background: var(--point);
+    width: 48px;
+    height: 48px;
+    border-radius: 50%;
+    box-shadow: var(--shadow);
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: all 0.3s;
+}
+.fixed_write:hover,
+.btn_scrolltop:hover{
+    transform: translateY(-4px);
+}
+.fixed_write svg{
+    fill: var(--black1);
+}
+.btn_scrolltop{
+    position: fixed;
+    right: 40px;
+    bottom: 96px;
+    background: var(--point);
+    width: 48px;
+    height: 48px;
+    border-radius: 50%;
+    box-shadow: var(--shadow);
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: all 0.3s;
+}
 .title{
     font-size: var(--fontsize32);
     letter-spacing: -2px;
@@ -12,18 +49,23 @@
     margin-top: var(--margin8);
     color: var(--black2);
 }
+.list_wrap{
+    display: flex;
+    gap: var(--gap20);
+    margin: var(--margin40) 0 var(--margin120) 0;
+}
 .wrap{
-    margin-top: var(--margin40);
     border-radius: var(--border_radius);
     border: 1px solid var(--gray1);
+    width: 800px;
 }
-.list_wrap{
+.list{
     padding: var(--padding20) var(--padding40);
     cursor: pointer;
     border-bottom: 1px solid var(--gray1);
     transition: background 0.3s;
 }
-.list_wrap:hover{
+.list:hover{
     background: var(--gray2);
 }
 .top_wrap{
@@ -62,4 +104,53 @@
     align-items: center;
     justify-content: center;
     gap: var(--gap8);
+}
+.side_box{
+    display: flex;
+    justify-content: space-between;
+    gap: var(--gap20);
+    border: 1px solid var(--gray1);
+    border-radius: var(--border_radius);
+    width: 380px;
+    flex-direction: column;
+    height: 100%;
+    padding-bottom: var(--padding10);
+}
+.side_title{
+    font-size: var(--fontsize24);
+    font-weight: bold;
+    margin: var(--margin20);
+    letter-spacing: -2px;
+}
+.side_list{
+    padding: var(--padding10) var(--padding20);
+    display: flex;
+    gap: var(--gap20);
+    transition: all 0.3s;
+    cursor: pointer;
+}
+.side_list:hover{
+    background: var(--gray2);
+}
+.rank{
+    font-size: var(--fontsize20);
+}
+.side_contentwrap{
+    width: 100%;
+}
+.side_top{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    color: var(--black2);
+}
+.side_nickname{
+    font-size: var(--fontsize14);
+}
+.side_date{
+    font-size: var(--fontsize12);
+}
+.side_content{
+    font-size: var(--fontsize14);
+    margin-top: var(--margin8);
 }
