--- a/app/react-app/nightsafe/src/App.css
+++ b/app/react-app/nightsafe/src/App.css
@@ -87,6 +87,13 @@ button{
   box-shadow: var(--nav_shadow);
 }
 
+.logo{
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 #nav>ul{
   display: flex;
   align-items: center;
