--- a/app/react-app/nightsafe/src/pages/login.module.css
+++ b/app/react-app/nightsafe/src/pages/login.module.css
@@ -1,13 +1,14 @@
 .loginContainer {
   width: 400px;
-  margin: 160px auto;
-  padding: 30px;
+  margin: 120px auto;
   border-radius: 8px;
   background-color: #fff;
 }
 
 h1 {
-  padding-bottom: 20px;
+  padding-bottom: 40px;
+  font-size: var(--fontsize32);
+  letter-spacing: -2px;
 }
 
 .loginForm {
@@ -16,23 +17,23 @@ h1 {
 }
 
 .loginInput {
-  padding: 10px;
-  margin-bottom: 15px;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  font-size: 14px;
+  padding: 20px;
+  margin-bottom: 20px;
+  border: 1px solid #E5E8EB;
+  border-radius: 12px;
+  font-size: 16px;
+  height: 60px;
 }
 
 .loginButton {
-  padding: 10px;
+  padding: 20px;
   margin: 20px 0 0;
   background-color: var(--point);
   color: var(--black1);
   border: none;
-  border-radius: 4px;
-  font-weight: bold;
+  border-radius: 12px;
   cursor: pointer;
-  font-size: 14px;
+  font-size: 16px;
 }
 
 .subActionList {
@@ -41,7 +42,7 @@ h1 {
   justify-content: center;
   list-style: none;
   padding: 0;
-  gap: 20px;
+  gap: 40px;
 }
 
 .subActionList li {
@@ -52,8 +53,8 @@ h1 {
   background: none;
   border: none;
   cursor: pointer;
-  font-size: var(--fontsize14);
-  padding: 5px;
+  font-size: var(--fontsize16);
+  color: var(--black2);
 }
 
 /* 모달 */
