--- a/app/react-app/nightsafe/src/pages/postdetail.module.css
+++ b/app/react-app/nightsafe/src/pages/postdetail.module.css
@@ -6,8 +6,8 @@
 }
 
 .postCard {
-    padding: 0;
-    border: none;
+    /* padding: 20px; */
+    background: #fff;
     border-radius: 12px;
 }
 
@@ -20,6 +20,12 @@
 .nickname {
     font-size: 16px;
     color: #333d4b;
+}
+
+.rightHeader {
+    display: flex;
+    align-items: center;
+    gap: 8px;
 }
 
 .time {
@@ -47,80 +53,95 @@
     border-radius: 8px;
 }
 
+.like_wrap {
+    display: flex;
+    margin-bottom: 16px;
+}
+
 .separator {
     height: 1px;
-    background: #e5e8eb;
-    margin: 16px 0 39px;
+    background: #E5E8EB;
+    margin: 39px 0 24px;
 }
 
 .commentForm {
     display: flex;
-    align-items: center;
-    gap: 12px;
+    align-items: flex-start;
+    gap: 8px;
     margin-bottom: 24px;
 }
 
-.textarea {
-    flex-grow: 1;
-    border-radius: 12px;
-    padding: 12px 16px;
-    font-size: 15px;
-    background-color: #f8fafb;
-    border: none;
+.input {
+    flex: 1;
+    /* padding: 8px 12px; */
+    border-radius: 8px;
+    background-color: #F8FAFB;
+    border: 1px solid #E5E8EB;
+    font-size: 14px;
     resize: none;
-    font-family: 'Noto Sans', sans-serif;
+    height: 40px;
 }
 
 .button {
-    background-color: #ffd75e;
+    padding: 8px 12px;
+    border-radius: 8px;
+    background-color: #FFD75E;
     border: none;
-    padding: 10px 18px;
-    border-radius: 12px;
-    font-size: 16px;
-    font-weight: 500;
+    font-size: 14px;
     color: #333d4b;
     cursor: pointer;
+    height: 40px;
 }
 
-.comment {
-    margin-bottom: 24px;
-    font-size: 15px;
-    color: #333d4b;
+.commentItem {
+    padding: 12px 0;
+    border-top: 1px solid #E5E8EB;
 }
 
 .commentHeader {
     display: flex;
     justify-content: space-between;
+    align-items: center;
     margin-bottom: 4px;
 }
 
-.commentNick {
-    font-size: 14px;
+.commentContent {
+    font-size: 15px;
     color: #333d4b;
+    white-space: pre-wrap;
 }
 
-.commentTime {
-    font-size: 14px;
-    color: #6b7684;
+.moreWrapper {
+    position: relative;
+    display: inline-block;
 }
 
-.like_wrap{
+.moreIcon {
+    background: #f0f0f0;
+    border: none;
+    border-radius: 8px;
+    padding: 4px 8px;
+    font-size: 18px;
+    cursor: pointer;
+}
+
+.moreMenu {
+    position: absolute;
+    top: 28px;
+    right: 0;
+    background: #fff;
+    border: 1px solid #ccc;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.05);
+    z-index: 10;
     display: flex;
-    align-items: center;
-    justify-content: space-between;
 }
 
-.btn_delete{
-    padding: 8px;
-    border: 1px solid #C5172E;
-    color: #C5172E;
+.moreMenuItem {
+    padding: 8px 16px;
     background: none;
-    border-radius: 12px;
-    font-size: 12px;
-    transition: all 0.3s;
-}
-
-.btn_delete:hover{
-    background: #C5172E;
-    color: #fff;
+    border: none;
+    color: #333d4b;
+    font-weight: 500;
+    cursor: pointer;
 }
