--- a/app/react-app/nightsafe/src/pages/analysis.module.css
+++ b/app/react-app/nightsafe/src/pages/analysis.module.css
@@ -1,5 +1,3 @@
-/* 수정 후 */
-
 .analysisWrapper {
   width: 1300px;
   margin: 40px auto;
@@ -20,14 +18,14 @@
 .PostChart {
   position: relative;
   width: 600px;
-  height: 450px;
+  height: 100%;
   float: right;
-  margin-top: 70px;
 }
 
 .map {
   width: 100%;
   height: 100%;
+  position: relative;
 }
 
 .fixbox {
@@ -49,4 +47,61 @@
 
 .safe .circle {
   background-color: #B6CDBD;
+}
+
+.tabWrapper {
+  margin: 2rem auto;
+  width: 600px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1rem;
+}
+
+.tabButtons {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+  width: 100%;
+}
+
+.tabButtons button {
+  width: 100%;
+  padding: 0.75rem 1rem;
+  font-size: 1rem;
+  border: none;
+  background-color: #eee;
+  cursor: pointer;
+  border-radius: 6px;
+  transition: background-color 0.3s;
+}
+
+.tabButtons button:hover {
+  background-color: #ddd;
+
+}
+
+.activeTab {
+  font-weight: bold;
+  background-color: var(--point) !important;
+}
+
+.tabContent {
+  width: 100%;
+  overflow: hidden;
+  background-color: #fafafa;
+  border-radius: 8px;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+}
+
+.secondInfo {
+  background-color: #fff;
+  border: 1px solid #ccc;
+  padding: 16px;
+  border-radius: 8px;
+  max-width: 300px;
+  margin: 20px auto;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+  font-size: var(--fontsize16);
+  line-height: 1.6;
 }
